# meow

./: docker-compose.yaml  requirements.txt
backend/: Dockerfile
backend/app/: main.py  routes.py
frontend/: Dockerfile  package.json
ml/meow/: audio_synchronizer.py  fast_stitching.py  meow.py
ml/meow/utils/: audio_utils.py  video_utils.py
stitching/: CMakeLists.txt
stitching/params/: camchain_0.yaml  camchain_1.yaml  camchain_2.yaml  camchain_3.yaml
stitching/src/: stitching_param_generator.cc
